--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,10 @@
 @import './common';
-@import './example';
+@import './header';
+@import './hero';
+@import './product';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './customer-reviews';
+@import './contacts';
+@import './footer';
